refactor: Pom.xml